--- a/Utils/FontEditor/FontEditor.lpi
+++ b/Utils/FontEditor/FontEditor.lpi
@@ -39,7 +39,7 @@
         <CursorPos X="119" Y="2"/>
         <TopLine Value="1"/>
         <EditorIndex Value="0"/>
-        <UsageCount Value="45"/>
+        <UsageCount Value="51"/>
         <Loaded Value="True"/>
       </Unit0>
       <Unit1>
@@ -49,25 +49,25 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="umain"/>
-        <CursorPos X="45" Y="229"/>
-        <TopLine Value="209"/>
+        <CursorPos X="63" Y="411"/>
+        <TopLine Value="409"/>
         <EditorIndex Value="1"/>
-        <UsageCount Value="45"/>
+        <UsageCount Value="51"/>
         <Loaded Value="True"/>
       </Unit1>
       <Unit2>
         <Filename Value="..\..\..\..\Lazarus\lcl\interfaces\win32\win32listsl.inc"/>
         <CursorPos X="27" Y="160"/>
         <TopLine Value="143"/>
-        <UsageCount Value="8"/>
+        <UsageCount Value="7"/>
       </Unit2>
       <Unit3>
         <Filename Value="Constants.pas"/>
         <UnitName Value="Constants"/>
         <CursorPos X="1" Y="26"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="2"/>
-        <UsageCount Value="23"/>
+        <EditorIndex Value="3"/>
+        <UsageCount Value="26"/>
         <Loaded Value="True"/>
       </Unit3>
       <Unit4>
@@ -75,106 +75,108 @@
         <UnitName Value="KM_TGATexture"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="8"/>
+        <UsageCount Value="7"/>
       </Unit4>
       <Unit5>
         <Filename Value="..\..\..\..\Lazarus\lcl\include\winapih.inc"/>
         <CursorPos X="125" Y="175"/>
         <TopLine Value="155"/>
-        <UsageCount Value="8"/>
+        <UsageCount Value="7"/>
       </Unit5>
       <Unit6>
         <Filename Value="umain.lfm"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="3"/>
-        <UsageCount Value="19"/>
+        <EditorIndex Value="4"/>
+        <UsageCount Value="22"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="LFM"/>
       </Unit6>
       <Unit7>
         <Filename Value="..\..\ Common \KromUtils.pas"/>
         <UnitName Value="KromUtils"/>
-        <CursorPos X="70" Y="46"/>
-        <TopLine Value="34"/>
-        <UsageCount Value="15"/>
+        <CursorPos X="37" Y="431"/>
+        <TopLine Value="418"/>
+        <EditorIndex Value="2"/>
+        <UsageCount Value="16"/>
+        <Loaded Value="True"/>
       </Unit7>
       <Unit8>
         <Filename Value="..\..\..\wr-toolkit\_Common_\kromUtils.pas"/>
         <UnitName Value="KromUtils"/>
         <CursorPos X="1" Y="572"/>
         <TopLine Value="551"/>
-        <UsageCount Value="9"/>
+        <UsageCount Value="8"/>
       </Unit8>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="umain.pas"/>
-        <Caret Line="111" Column="10" TopLine="98"/>
+        <Caret Line="486" Column="9" TopLine="477"/>
       </Position1>
       <Position2>
         <Filename Value="umain.pas"/>
-        <Caret Line="561" Column="61" TopLine="538"/>
+        <Caret Line="183" Column="32" TopLine="166"/>
       </Position2>
       <Position3>
         <Filename Value="umain.pas"/>
-        <Caret Line="114" Column="38" TopLine="100"/>
+        <Caret Line="392" Column="63" TopLine="371"/>
       </Position3>
       <Position4>
         <Filename Value="umain.pas"/>
-        <Caret Line="319" Column="1" TopLine="313"/>
+        <Caret Line="317" Column="63" TopLine="298"/>
       </Position4>
       <Position5>
         <Filename Value="umain.pas"/>
-        <Caret Line="116" Column="31" TopLine="100"/>
+        <Caret Line="314" Column="27" TopLine="301"/>
       </Position5>
       <Position6>
         <Filename Value="umain.pas"/>
-        <Caret Line="115" Column="8" TopLine="99"/>
+        <Caret Line="263" Column="5" TopLine="242"/>
       </Position6>
       <Position7>
         <Filename Value="umain.pas"/>
-        <Caret Line="275" Column="1" TopLine="255"/>
+        <Caret Line="221" Column="7" TopLine="216"/>
       </Position7>
       <Position8>
         <Filename Value="umain.pas"/>
-        <Caret Line="318" Column="14" TopLine="301"/>
+        <Caret Line="265" Column="12" TopLine="242"/>
       </Position8>
       <Position9>
         <Filename Value="umain.pas"/>
-        <Caret Line="332" Column="88" TopLine="324"/>
+        <Caret Line="165" Column="12" TopLine="148"/>
       </Position9>
       <Position10>
         <Filename Value="umain.pas"/>
-        <Caret Line="126" Column="4" TopLine="121"/>
+        <Caret Line="74" Column="57" TopLine="58"/>
       </Position10>
       <Position11>
         <Filename Value="umain.pas"/>
-        <Caret Line="547" Column="51" TopLine="539"/>
+        <Caret Line="85" Column="3" TopLine="68"/>
       </Position11>
       <Position12>
         <Filename Value="umain.pas"/>
-        <Caret Line="157" Column="1" TopLine="153"/>
+        <Caret Line="159" Column="1" TopLine="141"/>
       </Position12>
       <Position13>
         <Filename Value="umain.pas"/>
-        <Caret Line="416" Column="76" TopLine="411"/>
+        <Caret Line="105" Column="9" TopLine="87"/>
       </Position13>
       <Position14>
         <Filename Value="umain.pas"/>
-        <Caret Line="155" Column="3" TopLine="169"/>
+        <Caret Line="106" Column="38" TopLine="87"/>
       </Position14>
       <Position15>
         <Filename Value="umain.pas"/>
-        <Caret Line="392" Column="91" TopLine="368"/>
+        <Caret Line="123" Column="33" TopLine="106"/>
       </Position15>
       <Position16>
         <Filename Value="umain.pas"/>
-        <Caret Line="390" Column="61" TopLine="364"/>
+        <Caret Line="124" Column="38" TopLine="106"/>
       </Position16>
       <Position17>
         <Filename Value="umain.pas"/>
-        <Caret Line="76" Column="1" TopLine="67"/>
+        <Caret Line="155" Column="19" TopLine="138"/>
       </Position17>
       <Position18>
         <Filename Value="umain.pas"/>
@@ -182,51 +184,51 @@
       </Position18>
       <Position19>
         <Filename Value="umain.pas"/>
-        <Caret Line="115" Column="39" TopLine="98"/>
+        <Caret Line="20" Column="32" TopLine="1"/>
       </Position19>
       <Position20>
         <Filename Value="umain.pas"/>
-        <Caret Line="214" Column="3" TopLine="196"/>
+        <Caret Line="298" Column="13" TopLine="290"/>
       </Position20>
       <Position21>
         <Filename Value="umain.pas"/>
-        <Caret Line="249" Column="30" TopLine="232"/>
+        <Caret Line="112" Column="4" TopLine="97"/>
       </Position21>
       <Position22>
         <Filename Value="umain.pas"/>
-        <Caret Line="358" Column="20" TopLine="341"/>
+        <Caret Line="306" Column="11" TopLine="304"/>
       </Position22>
       <Position23>
         <Filename Value="umain.pas"/>
-        <Caret Line="486" Column="9" TopLine="477"/>
+        <Caret Line="257" Column="1" TopLine="233"/>
       </Position23>
       <Position24>
         <Filename Value="umain.pas"/>
-        <Caret Line="183" Column="32" TopLine="166"/>
+        <Caret Line="116" Column="86" TopLine="110"/>
       </Position24>
       <Position25>
         <Filename Value="umain.pas"/>
-        <Caret Line="392" Column="63" TopLine="371"/>
+        <Caret Line="129" Column="7" TopLine="108"/>
       </Position25>
       <Position26>
         <Filename Value="umain.pas"/>
-        <Caret Line="317" Column="63" TopLine="298"/>
+        <Caret Line="112" Column="39" TopLine="101"/>
       </Position26>
       <Position27>
         <Filename Value="umain.pas"/>
-        <Caret Line="314" Column="27" TopLine="301"/>
+        <Caret Line="115" Column="11" TopLine="101"/>
       </Position27>
       <Position28>
-        <Filename Value="umain.pas"/>
-        <Caret Line="263" Column="5" TopLine="242"/>
+        <Filename Value="..\..\ Common \KromUtils.pas"/>
+        <Caret Line="71" Column="15" TopLine="54"/>
       </Position28>
       <Position29>
-        <Filename Value="umain.pas"/>
-        <Caret Line="221" Column="7" TopLine="216"/>
+        <Filename Value="..\..\ Common \KromUtils.pas"/>
+        <Caret Line="443" Column="32" TopLine="420"/>
       </Position29>
       <Position30>
         <Filename Value="umain.pas"/>
-        <Caret Line="265" Column="12" TopLine="242"/>
+        <Caret Line="419" Column="31" TopLine="402"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
